--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>hello-world</title>
   </head>
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_1373198_ba6nlrtlr4f.css">
   <body>
     <noscript>
       <strong>We're sorry but hello-world doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
